--- a/Movie-Alchemy.ipynb
+++ b/Movie-Alchemy.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "id": "73bd46c4-b490-4e72-961f-a8b0cda968da",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "id": "1f8d58c3-b251-48e0-955d-c63d80540a9b",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "id": "dc1aab77-f9c1-46ab-ab29-1ed9ed959813",
    "metadata": {},
    "outputs": [
@@ -186,7 +186,7 @@
        "1  Pirates of the Caribbean: At World's End           6.9        4500  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "id": "4c9a1e64-168b-4915-af26-e43a61791193",
    "metadata": {},
    "outputs": [
@@ -209,7 +209,7 @@
        "(4803, 20)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "id": "83ba9fc3-1c24-444f-999a-43e9e6fa9424",
    "metadata": {},
    "outputs": [
@@ -315,7 +315,7 @@
        "4  [{\"credit_id\": \"52fe479ac3a36847f813eaa3\", \"de...  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,19 +327,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "851ef926-daf3-4802-a5dc-508eb6dba838",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# merging credits.csv and movies_metadata.csv\n",
     "movies = movies.merge(credits,on='title')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "ffac0096-cdf1-4519-a3b0-489d3141efc9",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +590,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,12 +605,12 @@
     "# popularity\n",
     "# production_comapny\n",
     "# production_countries\n",
-    "# release-date(not sure)"
+    "# release_date"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "id": "6da3e3f6-0613-49b5-8416-ae86286a7ab8",
    "metadata": {},
    "outputs": [],
@@ -623,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "id": "91b53aba-53cc-4edd-ba33-b049668b51f7",
    "metadata": {},
    "outputs": [
@@ -756,7 +753,7 @@
        "4  [{\"credit_id\": \"52fe479ac3a36847f813eaa3\", \"de...  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -783,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 10,
    "id": "e0b3ef56-56d4-439f-89e2-387674c45e5f",
    "metadata": {},
    "outputs": [],
@@ -800,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 11,
    "id": "f79bce0e-cef7-4412-ad49-b7d7ed5ebc2f",
    "metadata": {},
    "outputs": [],
@@ -811,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 12,
    "id": "d59cc5ba-a192-4244-b43a-b460e73e5ecc",
    "metadata": {},
    "outputs": [
@@ -944,7 +941,7 @@
        "4  [{\"credit_id\": \"52fe479ac3a36847f813eaa3\", \"de...  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -956,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 13,
    "id": "015add70-77e6-4244-b603-42b50e7ec6f7",
    "metadata": {},
    "outputs": [
@@ -1089,7 +1086,7 @@
        "4  [{\"credit_id\": \"52fe479ac3a36847f813eaa3\", \"de...  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1101,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 14,
    "id": "4f6fb724-6c5c-431b-9933-232d74ef923c",
    "metadata": {},
    "outputs": [
@@ -1114,7 +1111,7 @@
        " {'id': 878, 'name': 'Science Fiction'}]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1126,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 15,
    "id": "6cf3838e-ccf7-4f55-be59-afa345e7c994",
    "metadata": {},
    "outputs": [],
@@ -1143,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 16,
    "id": "bbd52c63-f251-48e8-be60-2ec7a1a9dfac",
    "metadata": {},
    "outputs": [
@@ -1276,7 +1273,7 @@
        "4  [{\"credit_id\": \"52fe479ac3a36847f813eaa3\", \"de...  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1288,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 17,
    "id": "fd783ce5-a782-4d0b-af8e-733c656115f4",
    "metadata": {},
    "outputs": [],
@@ -1299,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 18,
    "id": "9c938be7-1295-4516-b205-082524f0c48c",
    "metadata": {},
    "outputs": [],
@@ -1314,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 19,
    "id": "a558835f-70f7-4faf-bc17-f0c47a6b2325",
    "metadata": {},
    "outputs": [],
@@ -1324,7 +1321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 20,
    "id": "eeaa507a-421c-4f00-ad11-02cd5182fb60",
    "metadata": {},
    "outputs": [
@@ -1450,7 +1447,7 @@
        "4    [Taylor Kitsch, Lynn Collins, Samantha Morton]     [Andrew Stanton]  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1463,7 +1460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 21,
    "id": "ffbabd32-17f3-4900-9e07-a12cff3ee73a",
    "metadata": {},
    "outputs": [],
@@ -1478,7 +1475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 22,
    "id": "7ad38d06-b8ca-4836-b65e-21846c7f6a96",
    "metadata": {},
    "outputs": [],
@@ -1492,7 +1489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 23,
    "id": "2d3ddcce-1cf8-40c8-9160-a8bbd24fc992",
    "metadata": {},
    "outputs": [
@@ -1618,7 +1615,7 @@
        "4    [TaylorKitsch, LynnCollins, SamanthaMorton]     [AndrewStanton]  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1637,7 +1634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 24,
    "id": "76f9c1ca-c717-416a-8bdd-e2826817b86d",
    "metadata": {},
    "outputs": [],
@@ -1647,7 +1644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 25,
    "id": "7bf110bc-e453-430d-9ccf-f2f89f462489",
    "metadata": {},
    "outputs": [],
@@ -1657,7 +1654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 26,
    "id": "81115a31-7e78-4bdf-80db-876b4276a2c7",
    "metadata": {},
    "outputs": [],
@@ -1668,7 +1665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 27,
    "id": "186c5e5d-c81a-4b20-a817-5941bda0a99f",
    "metadata": {},
    "outputs": [
@@ -1762,7 +1759,7 @@
        "4           [Action, Adventure, ScienceFiction]  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1775,7 +1772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 28,
    "id": "f05bd2a6-f8d8-49e3-8888-b69c20f3eeac",
    "metadata": {},
    "outputs": [
@@ -1785,7 +1782,7 @@
        "\"Captain Barbossa, long believed to be dead, has come back to life and is headed to the edge of the Earth with Will Turner and Elizabeth Swann. But nothing is quite as it seems. Adventure Fantasy Action ocean drugabuse exoticisland eastindiatradingcompany loveofone'slife traitor shipwreck strongwoman ship alliance calypso afterlife fighter pirate swashbuckler aftercreditsstinger JohnnyDepp OrlandoBloom KeiraKnightley GoreVerbinski\""
       ]
      },
-     "execution_count": 69,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1812,7 +1809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 29,
    "id": "ddad5293-e150-411e-89f3-8b752b38da2c",
    "metadata": {},
    "outputs": [],
@@ -1823,7 +1820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 30,
    "id": "76ad0f12-7b00-41e0-9fa8-72130c979fbe",
    "metadata": {},
    "outputs": [],
@@ -1833,7 +1830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 31,
    "id": "7ea8d7d6-2f7d-460a-8c85-825c97189b5a",
    "metadata": {},
    "outputs": [
@@ -1843,7 +1840,7 @@
        "(4806, 5000)"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1854,7 +1851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 32,
    "id": "d54b7b6c-7e07-421f-82a7-2ad524cfb412",
    "metadata": {},
    "outputs": [],
@@ -1864,7 +1861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 33,
    "id": "884fb511-bc4a-4f24-8975-055327c2efba",
    "metadata": {},
    "outputs": [],
@@ -1874,7 +1871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 34,
    "id": "05c6c4ce-3bc8-4cfb-a729-e486edbeff7d",
    "metadata": {},
    "outputs": [
@@ -1896,7 +1893,7 @@
        "        1.        ]])"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1907,7 +1904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 35,
    "id": "3ecd5346-c02d-4863-909e-2830e169fc48",
    "metadata": {},
    "outputs": [
@@ -1917,7 +1914,7 @@
        "744"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1928,7 +1925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 36,
    "id": "9da35df5-af0d-4fd4-8c16-3026e072dfb0",
    "metadata": {},
    "outputs": [],
@@ -1942,7 +1939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 37,
    "id": "02778d0c-e831-40aa-b4c4-d8d7b3fc0e95",
    "metadata": {},
    "outputs": [
@@ -1964,7 +1961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 38,
    "id": "4b967116-36b2-47c1-8211-0286aec20e00",
    "metadata": {},
    "outputs": [],
@@ -1974,7 +1971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 39,
    "id": "106103e2-9c99-42f2-8c49-4552ee46fe18",
    "metadata": {},
    "outputs": [],
@@ -1985,7 +1982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 40,
    "id": "23252a36-e381-44d0-8593-e5fdc7ec75f5",
    "metadata": {},
    "outputs": [],
@@ -1996,7 +1993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 41,
    "id": "c007ae2c-d098-48ef-b38f-403dddc9bd1d",
    "metadata": {},
    "outputs": [
@@ -2116,7 +2113,7 @@
        "4    [TaylorKitsch, LynnCollins, SamanthaMorton]  "
       ]
      },
-     "execution_count": 82,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
